Ensure unordered lists aligns with ordered lists

--- a/src/assets/scss/tools/_ys-mixins.scss
+++ b/src/assets/scss/tools/_ys-mixins.scss
@@ -130,10 +130,6 @@
   height: rem(8);
   background-color: currentColor;
   border-radius: 50%;
-
-  @media screen and (min-width: $ys-breakpoint-lg) {
-    left: rem(16);
-  }
 }
 
 @mixin ys-list-item-unordered-indented() {
